--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -242,7 +242,11 @@
           </div>
         </div>
         <!-- _blank view -->
-        <div id="overlay" *ngIf="!row?.planSpots">
+        <!-- <div id="overlay" *ngIf="!row?.planSpots" matTooltip="まだプランは空です。おでかけ検索するか、おすすめプランから選択してください。" matTooltipPosition="above"
+          matTooltipClass="blank">
+        </div> -->
+        <div id="overlay">
+          <div class="box">まだプランは空です。<br/>おでかけ検索するか、おすすめプランから選択してください。</div>
         </div>
 
         <!-- <div id="overlay" *ngIf="!row?.planSpots">
