--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.scss
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.scss
@@ -33,6 +33,7 @@
     height: 100%;
     overflow-y: scroll;
     position: relative;
+    //margin-top: 172.8px;
 
     &::-webkit-scrollbar {
       //display: none;
