スポット詳細レイアウト

--- a/src/app/pages/spot-detail/spot-detail.component.scss
+++ b/src/app/pages/spot-detail/spot-detail.component.scss
@@ -905,7 +905,7 @@ div.spotdtl {
           position: relative;
 
           &:first-child {
-            width: 25vw;
+            width: 25%;
             white-space: nowrap;
           }
 
